--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@
     <head>
         <title>The best in the world</title>
     </head>
+<body>
+    <h1>i was thinking of writing this from a long time</h1>
+</body>
 </html>
